--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                         <p>about us</p>
                         <h2>We Are Digital Explorers</h2>
                         <span class="tex">
-                        <p>We believe brand interaction is key in communication. Real innovations and a
-                            positive
-                            customer experience are the heart of successful communication. No fake products and
-                            services. The customer is king, their lives and needs are the inspiration.</p>
+                            <p>We believe brand interaction is key in communication. Real innovations and a
+                                positive
+                                customer experience are the heart of successful communication. No fake products and
+                                services. The customer is king, their lives and needs are the inspiration.</p>
                         </span>
                     </div>
                     <ul class="about-list">
@@ -268,6 +268,12 @@
         </div>
     </section>
 
+
+
+<!-- ======================why-choose========================== -->
+
+
+
     <section class="why-choose">
         <div class="container">
             <div class="row">
@@ -277,12 +283,15 @@
                             <p>WHY CHOOSE US</p>
                             <h2>The Key To Your Motivation And Success</h2>
                             <span class="tex">
-                               <p> We believe brand interaction is key in communication. Real innovations and a positive
-                                customer experience are the heart of successful communication.</p>
-                            <h3><i class="fa-solid fa-check"></i> Core Development</h3>
-                                <p>No fake products and services. The customer is king, their lives and needs are the inspiration.</p>
-                            <h3><i class="fa-solid fa-check"></i> Define Your Choices</h3>
-                                <p>No fake products and services. The customer is king, their lives and needs are the inspiration.</p>
+                                <p> We believe brand interaction is key in communication. Real innovations and a
+                                    positive
+                                    customer experience are the heart of successful communication.</p>
+                                <h3><i class="fa-solid fa-check"></i> Core Development</h3>
+                                <p>No fake products and services. The customer is king, their lives and needs are the
+                                    inspiration.</p>
+                                <h3><i class="fa-solid fa-check"></i> Define Your Choices</h3>
+                                <p>No fake products and services. The customer is king, their lives and needs are the
+                                    inspiration.</p>
                             </span>
                         </div>
                     </div>
@@ -304,35 +313,128 @@
                         <p>Project Completed</p>
                         <div class="back-text">P</div>
                     </div>
-                    </div>
-                    <div class="col-3">
+                </div>
+                <div class="col-3">
                     <div class="num-box">
                         <span class="numbar-contant">100<span class="num-sign">%</span></span>
                         <p>Client Satisfaction</p>
                         <div class="back-text">C</div>
                     </div>
-                    </div>
-                    <div class="col-3">
+                </div>
+                <div class="col-3">
                     <div class="num-box">
                         <span class="numbar-contant">13</span>
                         <p>Awards</p>
                         <div class="back-text">A</div>
                     </div>
-                    </div>
-                    <div class="col-3">
+                </div>
+                <div class="col-3">
                     <div class="num-box">
                         <span class="numbar-contant">48<span class="num-sign">+</span></span>
                         <p>Expert Members</p>
                         <div class="back-text">E</div>
                     </div>
-                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!--===============project======================-->
     <section class="project">
-        
+        <!-- <div class="container"> -->
+        <div class="heading">
+            <p>PROJECT GALLERY</p>
+            <h2>We’ve Done Lot’s Of Work, Let’s Check Some From Here</h2>
+        </div>
+        <div class="row">
+            <div class="col-4 banner-project">
+                <div class="project-img">
+                    <img src="img/projects3.jpg" alt="SLIDE-1">
+                    <span class="project-info tex">
+                        <h3>Strategic Planing</h3>
+                        <p>Marketing</p>
+                    </span>
+                    <i class="fa-solid fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-4 banner-project">
+                <div class="project-img">
+                    <img src="img/projects4.jpg" alt="SLIDE-1">
+                    <span class="project-info tex">
+                        <h3>Competitor Analysis</h3>
+                        <p>Design</p>
+                    </span>
+                    <i class="fa-solid fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-4 banner-project">
+                <div class="project-img">
+                    <img src="img/projects5.jpg" alt="">
+                    <span class="project-info tex">
+                        <h3>SEO Consultancy</h3>
+                        <p>Development</p>
+                    </span>
+                    <i class="fa-solid fa-plus"></i>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
     </section>
+
+    <!-- ==============FEATURES=============== -->
+    <section class="features">
+        <div class="container">
+            <div class="heading">
+                <p>OUR FEATURES</p>
+                <h2>We always try to understand customers expectation</h2>
+            </div>
+            <ul class="feature-icon">
+                <div class="row">
+                <li><i class="fa-solid fa-people-group"></i><span class="icon-con"><p>user Experience</p></span></li>
+                <li><i class="fa-solid fa-object-group"></i><span class="icon-con"><p>Product Design</p></span></li>
+                <li><i class="fa-solid fa-bullhorn"></i><span class="icon-con"><p>Digital Marketing</p></span></li>
+                <li><i class="fa-solid fa-chart-simple"></i><span class="icon-con"><p>Branding</p></span></li>
+                <li><i class="fa-solid fa-computer"></i><span class="icon-con"><p>Development</p></span></li>
+                <li><i class="fa-solid fa-laptop"></i><span class="icon-con"><p>Marketing</p></span></li>
+                 </div>
+                </ul>
+                <div class="row">
+                    <div class="features-contant col-6">
+                        <div class="heading">
+                            <p>Define Your Choices</p>
+                            <h2>User Experience</h2>
+                            <span class="tex">
+                                <p>We believe brand interaction is key in communication. Real innovations and a
+                                    positive
+                                    customer experience are the heart of successful communication. No fake products and
+                                    services. The customer is king, their lives and needs are the inspiration.</p>
+                                </span>
+                            </div>
+                            <ul class="features-list">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <li><i class="fa-solid fa-check"></i>Recommender systems</li>
+                                        <li><i class="fa-solid fa-check"></i>Omnichannel analytics</li>
+                                        <li><i class="fa-solid fa-check"></i>Dedicated Developers</li>
+                                    </div>
+                                    <div class="col-6">
+                                        <li><i class="fa-solid fa-check"></i>Demand prediction</li>
+                            <li><i class="fa-solid fa-check"></i>Lead generation</li>
+                            <li><i class="fa-solid fa-check"></i>24/7 Support
+                            </li>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+            <div class="col-6">
+                <div class="features-img">
+                    <img src="img/features1.png" alt="features img....">
+                </div>
+            </div>
+        </div>
+</div>
+</section>
 </body>
+
 </html>
