--- a/index.html
+++ b/index.html
@@ -268,11 +268,7 @@
         </div>
     </section>
 
-
-
-<!-- ======================why-choose========================== -->
-
-
+    <!-- ======================why-choose========================== -->
 
     <section class="why-choose">
         <div class="container">
@@ -391,50 +387,267 @@
             </div>
             <ul class="feature-icon">
                 <div class="row">
-                <li><i class="fa-solid fa-people-group"></i><span class="icon-con"><p>user Experience</p></span></li>
-                <li><i class="fa-solid fa-object-group"></i><span class="icon-con"><p>Product Design</p></span></li>
-                <li><i class="fa-solid fa-bullhorn"></i><span class="icon-con"><p>Digital Marketing</p></span></li>
-                <li><i class="fa-solid fa-chart-simple"></i><span class="icon-con"><p>Branding</p></span></li>
-                <li><i class="fa-solid fa-computer"></i><span class="icon-con"><p>Development</p></span></li>
-                <li><i class="fa-solid fa-laptop"></i><span class="icon-con"><p>Marketing</p></span></li>
-                 </div>
-                </ul>
-                <div class="row">
-                    <div class="features-contant col-6">
-                        <div class="heading">
-                            <p>Define Your Choices</p>
-                            <h2>User Experience</h2>
-                            <span class="tex">
-                                <p>We believe brand interaction is key in communication. Real innovations and a
-                                    positive
-                                    customer experience are the heart of successful communication. No fake products and
-                                    services. The customer is king, their lives and needs are the inspiration.</p>
-                                </span>
-                            </div>
-                            <ul class="features-list">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <li><i class="fa-solid fa-check"></i>Recommender systems</li>
-                                        <li><i class="fa-solid fa-check"></i>Omnichannel analytics</li>
-                                        <li><i class="fa-solid fa-check"></i>Dedicated Developers</li>
-                                    </div>
-                                    <div class="col-6">
-                                        <li><i class="fa-solid fa-check"></i>Demand prediction</li>
-                            <li><i class="fa-solid fa-check"></i>Lead generation</li>
-                            <li><i class="fa-solid fa-check"></i>24/7 Support
-                            </li>
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-people-group"></i><span class="icon-con">
+                                <p>user Experience</p>
+                            </span>
                         </div>
                     </div>
-                </ul>
-            </div>
-            <div class="col-6">
-                <div class="features-img">
-                    <img src="img/features1.png" alt="features img....">
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-object-group"></i><span class="icon-con">
+                                <p>Product Design</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-bullhorn"></i><span class="icon-con">
+                                <p>Digital Marketing</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-chart-line"></i><span class="icon-con">
+                                <p>Branding</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-computer"></i><span class="icon-con">
+                                <p>Development</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="fe-list">
+                            <i class="fa-solid fa-laptop"></i><span class="icon-con">
+                                <p>Marketing</p>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </ul>
+            <div class="row">
+                <div class="features-contant col-6">
+                    <div class="heading">
+                        <p>Define Your Choices</p>
+                        <h2>User Experience</h2>
+                        <span class="tex">
+                            <p>We believe brand interaction is key in communication. Real innovations and a
+                                positive
+                                customer experience are the heart of successful communication. No fake products and
+                                services. The customer is king, their lives and needs are the inspiration.</p>
+                        </span>
+                    </div>
+                    <ul class="features-list">
+                        <div class="row">
+                            <div class="col-6">
+                                <li><i class="fa-solid fa-check"></i>Open Source</li>
+                                <li><i class="fa-solid fa-check"></i>High Security</li>
+                                <li><i class="fa-solid fa-check"></i>Creative Layout</li>
+                            </div>
+                            <div class="col-6">
+                                <li><i class="fa-solid fa-check"></i>Optimal Choice</li>
+                                <li><i class="fa-solid fa-check"></i>Great Advices</li>
+                                <li><i class="fa-solid fa-check"></i>Super Responsive
+                                </li>
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <div class="features-img">
+                        <img src="img/features1.png" alt="features img....">
+                    </div>
                 </div>
             </div>
         </div>
-</div>
-</section>
+    </section>
+<!-- ===============team - info ================== -->
+    <section class="team-info">
+        <div class="container">
+            <div class="heading">
+                <p>OUR TEAM</p>
+                <h2>Meet Our Awesome Team Member</h2>
+            </div>
+            <div class="row">
+                <div class="col-4 mem-id">
+                    <div class="card-data">
+                        <div class="team-img">
+                            <img src="img/team1.jpg" alt="team-img...">
+                        </div>
+                        <div class="team-name">
+                            <h3>SEO Consultancy</h3>
+                            <p>Development</p>
+                        </div>
+                        <span class="id-link">
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="col-4 mem-id">
+                    <div class="card-data">
+                        <div class="team-img">
+                            <img src="img/team2.jpg" alt="team-img...">
+                        </div>
+                        <div class="team-name">
+                            <h3>Lucy Eva</h3>
+                            <p>Manager</p>
+                        </div>
+                        <span class="id-link">
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="col-4 mem-id">
+                    <div class="card-data">
+                        <div class="team-img">
+                            <img src="img/team3.jpg" alt="team-img...">
+                        </div>
+                        <div class="team-name">
+                            <h3>Steven Smith</h3>
+                            <p>Web Developer</p>
+                        </div>
+                        <span class="id-link">
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+    </section>
+<!-- ================sub-plans===================  -->
+    <section class="sub-plans">
+        <div class="container">
+            <div class="heading">
+                <p>PRICING PLAN</p>
+                <h2>Choose Your Best Plan</h2>
+                <span class="tex"><p>Real innovations and a positive customer experience are the heart of successful communication. No fake products and services.
+                </p></span>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="sub-cards">
+                        <div class="sub-name">
+                            Basic
+                        </div>
+                        <div class="sub-prices">
+                            <span class="sub">&dollar;</span>39.99<span class="sub">/mo</span>
+                        </div>
+                        <hr>
+                        <div class="about-sub">
+                            <ul>
+                                <div class="sub-about-list">
+                                    <li>1 Projects</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                    <li>Email Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                    <li>Phone Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Article Promotion</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Editorial Services</li><i class="fa-solid fa-xmark"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Profile Management</li><i class="fa-solid fa-xmark"></i>
+                                </div>
+                                <hr>
+                            </ul>
+                        </div>
+                        <span class="hov-sub">
+                        <a href="javascript:void(0);" class="ul-hover">Get Started</a>
+                    </span>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="sub-cards">
+                        <div class="sub-name">
+                            Starter
+                        </div>
+                        <div class="sub-prices">
+                            <span class="sub">&dollar;</span>49.99<span class="sub">/mo</span>
+                        </div>
+                        <hr>
+                        <div class="about-sub">
+                            <ul>
+                                <div class="sub-about-list">
+                                <li>2 Projects</li><i class="fa-solid fa-check"></i>
+                            </div>
+                            <div class="sub-about-list">
+                                <li>Email Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Phone Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Article Promotion</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Editorial Services</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                    <li>Profile Management</li><i class="fa-solid fa-xmark"></i>
+                                </div>
+                            </ul>
+                            <hr>
+                            <a href="javascript:void(0);">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="sub-cards">
+                        <div class="sub-name">
+                            Extended
+                        </div>
+                        <div class="sub-prices">
+                            <span class="sub">&dollar;</span>59.99<span class="sub">/mo</span>
+                        </div>
+                        <hr>
+                        <div class="about-sub">
+                            <ul>
+                                <div class="sub-about-list">
+                                <li>3 Projects</li><i class="fa-solid fa-check"></i>
+                            </div>
+                            <div class="sub-about-list">
+                                <li>Email Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Phone Support</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Article Promotion</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Editorial Services</li><i class="fa-solid fa-check"></i>
+                                </div>
+                                <div class="sub-about-list">
+                                <li>Profile Management</li><i class="fa-solid fa-check"></i>
+                                </div>
+                            </ul>
+                            <hr>
+                            <a href="javascript:void(0);">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
